update after mjnicipio upgrade

--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -101,7 +101,9 @@ html.translated-ltr #site-header {
 article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist) li+li {
     margin-top:0px;
 }
-
+.collapsible {
+    margin-top:0px;
+}
 
 
 
