--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -102,7 +102,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     margin-top:0px;
 }
 .collapsible {
-    margin-top:0px;
+    margin-top:0px !important;
 }
 
 
