--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -771,9 +771,10 @@ td, tr {
 }
 
 .waitingForConnection {
-  -webkit-animation: borderPulse 1s infinite alternate;
+  /*-webkit-animation: borderPulse 1s infinite alternate;
   -moz-animation: borderPulse 1s infinite alternate;
-  -animation: borderPulse 1s infinite alternate;
+  -animation: borderPulse 1s infinite alternate;*/
+  //animation: a 2.1s cubic-bezier(.65,.815,.735,.395) infinite;
 }
 
 @-webkit-keyframes borderPulse {
@@ -787,5 +788,40 @@ td, tr {
     background-color:black !important;
     border-bottom:#fff !important;
     box-shadow: 0 1px 0 0 #fff !important;
+  }
+}
+
+.progress {
+  height: 1px!important;
+  width: calc(50% - 3rem) !important;
+  margin: -20px auto !important;
+  margin-bottom: 10px !important;
+
+}
+.searchArea .preloader-wrapper {
+  position:absolute;
+  top:35px;
+  right:80px;
+  width: 30px!important;
+  height: 30px!important;
+}
+@media (max-width: 768px) {
+  .searchArea .preloader-wrapper {
+    top:40px;
+    right:40px;
+    width: 20px!important;
+    height: 20px!important;
+  }
+}
+@media (max-width: 450px) {
+  .searchArea .preloader-wrapper {
+    top: 30px;
+    width: 24px!important;
+    height: 24px!important;
+    left: 48px;
+    right: auto;
+  }
+  .searchArea .spinner-layer {
+    border-color: $white !important;
   }
 }
