late hour fixes, main menu responsive, admin palette colors, etc

--- a/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
@@ -27,13 +27,13 @@ $palette-green-5: $palette-primary-green !important;
 
 
 /* Red */
-$palette-primary-red: #fe0e35;
+$palette-primary-red: #7a409c;
 
 /* Blue */
-$palette-primary-blue: #00aaff;
+$palette-primary-blue: #0195af;
 
 /* Mint */
-$palette-primary-mint: #00f2d3;
+$palette-primary-mint: #01ab98;
 
 /* Hulk */
 $palette-primary-hulk-green: #a8ff00;
