--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -104,7 +104,9 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .collapsible {
     margin-top:0px !important;
 }
-
+.modal {
+    background-color: #fff;
+}
 
 
 
