--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -554,11 +554,20 @@ input[type=text]:focus.invalid {
   }
   .fpthmob th {
     background-color:$defaultDarkGreen;
+    padding-top:25px;
+
   }
+
+  .fpthmob:first-child th{
+    padding-top:0px;
+  }
+
   .fpthmob span, .streetCiy{
     text-transform: capitalize !important;
   }
-
+  .fpthmob th i {
+    margin-right:5px;
+  }
   @media (max-width: 450px) {
     .badgeInfo {
       margin-top:10px;
