--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -268,6 +268,6 @@ div.wpforms-container-full .wpforms-form input[type=search], div.wpforms-contain
 div.wpforms-container-full .wpforms-form input[type=text], div.wpforms-container-full .wpforms-form input[type=time],
 div.wpforms-container-full .wpforms-form input[type=url], div.wpforms-container-full .wpforms-form input[type=week],
 div.wpforms-container-full .wpforms-form select, div.wpforms-container-full .wpforms-form textarea {
-  background-color:#fff !important;
+  background-color:$palette-primary-grey-input !important;
 }
 
