--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -270,4 +270,7 @@ div.wpforms-container-full .wpforms-form input[type=url], div.wpforms-container-
 div.wpforms-container-full .wpforms-form select, div.wpforms-container-full .wpforms-form textarea {
   background-color:$palette-primary-grey !important;
 }
-
+.wpforms-form:after {
+  font-family: 'Material Icons';
+  content: 'arrow_drop_down';
+}
