--- a/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
@@ -11,8 +11,11 @@ $palette-primary-white-opacity: rgba(255,255,255,0.9);
 $palette-primary-grey: #f6f6f6;
 $palette-primary-grey-input:#e6e6e6;
 
+$palette-primary-darkgrey: #393939;
+
 /* Black */
 $palette-primary-black: #000;
+
 
 /* Green */
 $palette-primary-green: #007586;
