--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -39,7 +39,7 @@ b, strong {
 
 h1, h2, h3, h4, h5 {
     @include font('Lato', 900);
-    color:$palette-primary-green;
+    color:$palette-primary-darkgrey;
 
 }
 
