wpforms label color

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -275,3 +275,7 @@ div.wpforms-container-full .wpforms-form select:after {
   font-family: 'Material Icons';
   content: 'arrow_drop_down';
 }
+div.wpforms-container-full .wpforms-form .wpforms-field-label {
+  color:$palette-primary-darkgrey;
+}
+
