--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -40,8 +40,8 @@ b, strong {
 h1, h2, h3, h4, h5 {
     @include font('Lato', 900);
     color:$palette-primary-darkgrey;
-    //margin-bottom:0px;
-    //margin-top:1.3em !important
+    margin-bottom:0px;
+    margin-top:1.3em !important
 }
 
 h1 {
