--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -129,3 +129,7 @@ a, p, label, input,
  h2, h3, h4 ,h5, li, span, table, td, th, tr {
     @include textRendering();
 }
+
+blockquote {
+    color:$palette-primary-darkgrey;
+}
