--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -40,6 +40,8 @@ b, strong {
 h1, h2, h3, h4, h5 {
     @include font('Lato', 900);
     color:$palette-primary-darkgrey;
+}
+h1, h2, h3 {
     margin-bottom:0px;
     margin-top:1.3em !important
 }
