--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -173,3 +173,29 @@
 &.nsr-background-grey .page-footer {
     display:none;
 }
+article {
+    td, th {
+        padding: 15px 5px;
+        display: table-cell;
+        text-align: left;
+        vertical-align: middle;
+        border-radius: 2px;
+        border-bottom: 1px solid #d0d0d0;
+    }
+    thead {
+        border-bottom: 1px solid #d0d0d0;
+    }
+    table {
+        width: 100%;
+        display: table;
+    }
+    table {
+        width: 100%;
+        display: table;
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+    table.striped>tbody>tr:nth-child(odd) {
+        background-color: #f2f2f2 !important;
+    }
+}
