--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -182,6 +182,9 @@ article {
         border-radius: 2px;
 
     }
+    td {
+        border:none !important;
+    }
     thead {
         border-bottom: 1px solid #d0d0d0;
     }
