--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -185,7 +185,7 @@ article {
     td {
         border:none !important;
     }
-    thead {
+    th  {
         border-bottom: 1px solid #d0d0d0;
     }
     table {
