tr border, background

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -198,10 +198,10 @@ article {
         border-collapse: collapse;
         border-spacing: 0;
     }
-    article table tbody tr+tr:nth-child(odd) {
+    table tbody tr+tr:nth-child(odd) {
         background-color: #f2f2f2 !important;
     }
-    article table tbody tr+tr {
-        border:none;
+    table tbody tr+tr {
+        border:none !important;
     }
 }
