--- a/wp-content/themes/municipio-nsr/editor-style.css
+++ b/wp-content/themes/municipio-nsr/editor-style.css
@@ -46,15 +46,15 @@ h2 {
     font-style: normal;
     font-size: 2.50rem;
     margin-bottom:0px;
+    line-height:1.78rem;
 }
 h3 {
     font-style: normal;
     font-weight: 900;
     font-size: 1.7rem;
     margin-bottom:0px;
+    line-height:1.78rem;
 }
-
-
 
 h5 {
     font-size: 1.3rem;
