openhours exceptions. show more results

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -289,7 +289,7 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   color:alpha-color($palette-primary-green, 10%, $type:'dark');
 }
 
-.vc_row {
+.openhours {
   -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 3s; /* Firefox < 16 */
   -ms-animation: fadein 3s; /* Internet Explorer */
