late night bg color fix

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -204,7 +204,7 @@ article {
         border-spacing: 0;
     }
     table tbody tr+tr:nth-child(even) {
-        background-color: $palette-primary-grey !important;
+        background-color: $palette-primary-grey;
     }
     table tbody tr+tr {
         border:none !important;
