--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -54,6 +54,7 @@ h1 {
     max-width:990px !important;
     line-height:115%;
     padding:0px;
+    padding-bottom:20px;
 }
 h2 {
     font-size: 2.92rem;
