--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -325,3 +325,7 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   from { opacity: 0; }
   to   { opacity: 1; }
 }
+
+.wpb_wrapper ul {
+  margin-top: 0.5rem;
+}
