--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -327,5 +327,5 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
 }
 
 .wpb_wrapper ul {
-  margin-top: 0.5rem;
+  margin-top: 0.5rem !important;
 }
