--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -332,12 +332,9 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
 
 /* Ie fixes */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .searchNSR .input-field input[type=search]+label {
+    margin-top:12px;
+  }
 
-  body {
-    background:red !important;
-  }
-  div {
-    display:none;
-  }
 
 }
