--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -342,5 +342,5 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   top:1.3rem !important;
   transform: none !important;
   transition:none !important;
-  font-size:.9 !important;
+  font-size: 0.9rem !important;
 }
