--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -332,15 +332,12 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
 
 /* Ie fixes */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .searchNSR .input-field input[type=search]+label {
-    top:1.3rem !important;
+  .searchNSR .input-field input[type=search]+label,
+  .searchNSR .input-field input[type=search]+label.active{
+    top:1.1rem !important;
+    transform: none !important;
+    transition:none !important;
+    font-size: 0.9rem !important;
+    margin-top:0px !important;
   }
-
-
-}
-.searchNSR .input-field input[type=search]+label{
-  top:1.3rem !important;
-  transform: none !important;
-  transition:none !important;
-  font-size: 0.9rem !important;
 }
