I hate IE, padding left

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -352,7 +352,8 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   .searchNSR .search-autocomplete .meta-fraktion li a,
   .searchNSR .search-content .meta-fraktion li a,
   .searchNSR .sorterings-guide-table .meta-fraktion li a {
-    padding-left:0 !important;
+    padding:0px !important;
+
   }
 
 }
