--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -352,9 +352,9 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   .searchNSR .search-autocomplete .meta-fraktion li a,
   .searchNSR .search-content .meta-fraktion li a,
   .searchNSR .sorterings-guide-table .meta-fraktion li a {
-    padding:0px !important;
+    padding: 0px 0px !important;
 
   }
 
-}
 
+}
