--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -355,6 +355,9 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
     padding: 0px 0px !important;
 
   }
+  .searchNSR .fraktion-icon {
+    padding-left:5px !important;
+  }
 
 
 }
