--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -330,6 +330,10 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   margin-top: 0.5rem !important;
 }
 
+.print-doc {
+  display:none;
+}
+
 /* Ie fixes */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .searchNSR .input-field input[type=search]+label,
