trying to fix ie - print only

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -362,6 +362,8 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   .searchNSR .fraktion-icon {
     padding-left:0px !important;
   }
-
+  .print-only {
+    display:block !important;
+  }
 
 }
