--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -358,6 +358,9 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   .searchNSR .fraktion-icon {
     padding-left:0px !important;
   }
+  .mobile-logo {
+    margin-top:-25px;
+  }
 
 
 }
