--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -14,7 +14,7 @@
         max-width:530px;
         min-width:530px;
         width:100%;
-        padding-top: 8px;
+        padding-top:8px;
 
         nav {
             background-color: $palette-primary-white;
@@ -62,6 +62,7 @@
 
         padding:10px 0;
         display: table-cell;
+
 
         &:hover {
             background: none;
@@ -165,7 +166,7 @@
         min-height: 100%;
         display: flex;
         flex-direction: column;
-
+        margin-top:15px;
 
         & a:hover, &.active {
             background:none;
