ie typography fix

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -368,6 +368,7 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
     font-kerning: normal !important;
     font-smoothing: antialiased !important;
     transform: none !important;
+    letter-spacing: 0.4rem;
   }
 
 }
