--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -362,7 +362,7 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
     margin-top:-32px;
   }
 
-  h1, h2, h3, h4, h5, p, li, span{
+  .collection-item, .collapsible-header {
     text-rendering: optimizeLegibility !important;
     -ms-font-feature-settings: "dlig" 1, "kern" 1, "frac" 1 !important;
     font-kerning: normal !important;
