--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -372,4 +372,8 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
 
   }
 
+  .sites-nav .nav .menu-item {
+    min-width: 126px;
+  }
+
 }
