--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -375,5 +375,7 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   .sites-nav .nav .menu-item {
     min-width: 126px;
   }
-
+  .nav-wrapper {
+    min-width:503px;
+  }
 }
