--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -377,5 +377,6 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   }
   .nav-wrapper {
     min-width:460px;
+    margin-left:30px;
   }
 }
