ie nav responsive fix

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -377,6 +377,14 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   }
   .nav-wrapper {
     min-width:460px;
-    margin-left:30px;
   }
+  @media (max-width: 780px) {
+    .nav-wrapper {
+      display:none !important;
+    }
+    .mob {
+      display:block !important;
+    }
+  }
+
 }
