--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -384,7 +384,7 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
 
   }
   @media (max-width: 800px) {
-    .nav-wrapper {
+    .sites-nav {
       display:none !important;
     }
     .mob, .mobile-nav {
