--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -396,9 +396,13 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
 
 
 }
-
+.wpforms-field-label-inline {
+  padding-left:0px;
+}
 .wpforms-field-label-inline:before {
   padding-left:0px;
   margin-left:0px;
   border:1px solid red;
+  position:absolute;
+  left:0px;
 }
