--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -397,10 +397,11 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
     padding-left:0px;
   }
   .wpforms-field-label-inline:before {
-    padding-left:0px;
+    padding-left:10px;
     margin-left:0px;
     position:absolute;
     left:-25px !important;
+    background-color:$palette-primary-grey-input;
   }
 
 
