ie fix checkboxes

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -395,7 +395,7 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   }
   .wpforms-field-label-inline {
     padding-left:0px;
-    padding-left:18px;
+    padding-left:26px !important;
   }
   .wpforms-field-label-inline:before {
     margin-left:0px;
@@ -404,4 +404,8 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
 
   }
 
+}
+.wpforms-field-label-inline {
+  padding-left:0px;
+  padding-left:26px;
 }
