--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -545,7 +545,7 @@ input[type=text]:focus.invalid {
   .badgeInfo {
     color:$white;
     font-size:0.9rem;
-    margin-bottom:10px;
+    margin-bottom:10px !important;
   }
   .fp-table .badge {
     //float:left;
