--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -107,6 +107,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .modal {
     background-color: #fff;
 }
-
+.page-template-default .doc-nfo {
+    display:block !important;
+}
 
 
