--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -110,5 +110,9 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .page-template-default .doc-nfo {
     display:block !important;
 }
+.readspeaker-play-button:before {
+    font-family: "Material Icons" !important;
+    content: 'hearing' !important;
+}
 
 
