--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -114,5 +114,13 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     font-family: "Material Icons" !important;
     content: 'hearing' !important;
 }
+.home #readspeaker-play-button {
+    visibility: hidden;
+}
+
+.home #readspeaker-play-button:before {
+    visibility: visible;
+}
+
 
 
