--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -121,6 +121,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .home .readspeaker-play-button {
     max-width: 10px;
     width:10px;
+    right: 10px;
+    position: absolute;
 }
 .home .readspeaker-play-button:hover {
     text-decoration: none !important;
