--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -150,6 +150,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .home .mobile-search #readspeaker-play-button:before {
     visibility: visible;
 }
-
+.material-icons .sync_sent {
+    display:none;
+}
 
 
