--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -132,10 +132,11 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .home .readspeaker-play-button:before {
     font-size: 2.1rem;
     position: absolute;
-    top: -33px;
+    top: -34px;
     right: -25px;
     font-weight: 400;
 }
+
 .mobile-search #readspeaker-play-button, .mobile-search #readspeaker-play-button:before {
     display:none;
 }
@@ -153,5 +154,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .material-icons .sync_sent {
     display:none;
 }
-
+.language {
+    font-size: 2.1rem;
+}
 
