--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -155,6 +155,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     display:none;
 }
 .translate-icon-btn i {
-    font-size: 2.1rem;
+    font-size: 1.8rem;
+    margin-right:5px;
 }
 
