--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -159,7 +159,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 }
 .translate-icon-btn i {
     font-size: 1.8rem;
-    margin-right:5px;
-    margin-top:2px;
+    position:absolute;
+    position: absolute;
+    right: 7px;
 }
 
