--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -161,6 +161,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     font-size: 1.8rem;
     position:absolute;
     position: absolute;
-    right: 7px;
+    top: -4px;
+    right: 12px;
 }
 
