--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -158,10 +158,10 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     cursor:pointer;
 }
 .translate-icon-btn i {
-    font-size: 1.8rem;
-    position:absolute;
+    font-size: 2.1rem;
     position: absolute;
-    top: -4px;
-    right: 12px;
+    top: -34px;
+    right: -25px;
+    font-weight: 400;
 }
 
