--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -133,7 +133,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     font-size: 2.1rem;
     position: absolute;
     top: -34px;
-    right: -25px;
+    right: -20px;
     font-weight: 400;
 }
 
@@ -160,5 +160,6 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .translate-icon-btn i {
     font-size: 1.6rem;
     font-weight: 400;
+    margin-right:3px;
 }
 
