--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -161,8 +161,9 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     float: left;
     width: 36px;
 }
-.acc-helper-menu li.quickSearch {
+.acc-helper-menu .quickSearch {
     margin-top:-3px;
+    margin-left:5px;
 }
 
 
