--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -244,7 +244,7 @@
     }
 
     @media (max-width: 860px) {
-        .mobile-search i{
+        .acc-helper-menu{
             display:none;
         }
     }
@@ -252,7 +252,7 @@
         #nsr-logo{
             max-width:100%;
         }
-        .mobile-search i{
+        .acc-helper-menu{
             display:block;
         }
     }
